--- a/_posts/Language/C++/2021-08-23-(C++)기초 정리.md
+++ b/_posts/Language/C++/2021-08-23-(C++)기초 정리.md
@@ -737,43 +737,41 @@ Tomorrow will be too late. It's Right Now or never, my love won't wait
 
 <br><br>
 
-### 5장:: 함수와 참조-복사 생성자
+## 5장:: 함수와 참조-복사 생성자
 
-call by value 
-call by adress - this
-call by reference  // 참조
+**함수의 인자 전달 방식**
 
-함수의 인자 전달 방식 -> 기존에 아는것과 같음. (reference만 조금 처음보는부분)
-call by value, call by adress
+* call by value  : 값 전달 방식
+  * 매개 변수의 생성자 실행되지 않음!!, 함수종료 시 매개 변수의 소멸자 실행!!
+* call by adress - this : 주소 전달 방식
+  * 생성자 소멸자가 실행되지 않는 구조
+* call by reference  : 참조 방식
+  * 참조 변수 선언 방법 : `&refn`  => 참조 변수 `refn` 선언을 의미.**(별명)**  
+    => 따로 변수가 생성되서 주소 공유하는게 아니라 참조할 변수를 같이 공유**(그냥 별명 지은느낌)**
+  * **포인터는 거쳐가서 수정느낌, 레퍼런스(참조)는 바로 수정느낌.**
 
-'값에 의한 호출' 방식 
-=> 매개 변수의 생성자 실행되지 않음!!, 함수종료 시 매개 변수의 소멸자 실행!!
+<br>
 
-'주소에 의한 호출' 방식
-=> 생성자 소멸자가 실행되지 않는 구조
+**참조에 의한 호출 사례 파트 보면 장점이 포인터로 거쳐서 갈필요 없기 때문에 메모리 낭비 적다는것을 알수 있다.  
+그러나, 단점은 포인터는 다른녀석으로 바꿀수 있지만, 참조는 별명이기 때문에 영원히 하나만 따라간다.**
 
-**객체 치환 및 객체 리턴**
+* `int avg` 를 `int &avg = avg` 이것도 된다. => main에서 avg와 함수안에서 avg이기때문  
+  쓰는 이유? : 예제 5-5 참조 매개 변수로 평균 리턴하기 참고!!
 
-참조자 : &
-참조 변수 -> &refn 참조 변수 refn 선언.**(별명)**
-=> 따로 변수가 생성되서 주소 공유하는게 아니라 참조할 변수를 같이 공유**(그냥 별명 지은느낌)**
-선언후 refn = n; 이런건 틀린말, refn = 3; 이런건 가능.
-**포인터는 거쳐가서 수정느낌, 레퍼런스(참조)는 바로 수정느낌.**
+<br>
 
-참조에 의한 호출 사례 파트 보면 장점이 포인터로 거쳐서 갈필요 없기 때문에 메모리 낭비 적다는것을 알수 있다.
-그러나, 단점은 포인터는 다른녀석으로 바꿀수 있지만, 참조는 별명이기 때문에 영원히 하나만 따라간다.
+**예제와 함께 확인**
 
-int avg를 int &avg = avg이것도 된다. => main에서 avg와 함수안에서 avg이기때문
-쓰는 이유?: 예제 5-5 참조 매개 변수로 평균 리턴하기
+* **값을 리턴하는 함수 vs 참조를 리턴하는 함수**
 
-값을 리턴하는 함수 vs 참조를 리턴하는 함수
+* **얕은복사 vs 깊은복사**
 
-얕은복사 vs 깊은복사
+* **복사 생성자 !! -> 참조이용?! 한 클래스에 오직 한개! 오류부분 보기. 예제5-10, 11, 12 !!!**  
+  => 객체의 복사 생성시 호출되는 특별한 생성자
+  * 예: Circle(Circle& c); 이런식으로 선언!!(&참조 이용)
+  * **디폴트 복사 생성자 => 복사 생성자가 선언 X일시 컴파일러가 자동 삽입**
 
-복사 생성자 !! -> 참조이용?! 한 클래스에 오직 한개! 오류부분 보기예제5-10, 11, 12 !!!
-=> 객체의 복사 생성시 호출되는 특별한 생성자
-     예: Circle(Circle& c); 이런식으로 선언!!(&참조 이용)
-**디폴트 복사 생성자 => 복사 생성자가 선언 X일시 컴파일러가 자동 삽입**
+<br>
 
 #### 예제 ::
 
@@ -821,10 +819,12 @@ int main() {
 }
 =>
 생성자 실행 radius = 30
-소멸자 실행 radius = 31 // 생성자 실행x, 소멸자만
+소멸자 실행 radius = 31 // 생성자 실행x, 소멸자만 실행 => increase 함수 내부의 c의 값전달 받았을때 특징!
 30
 소멸자 실행 radius = 30
 ```
+
+<br>
 
 **예제 5-5 참조 매개 변수로 평균 리턴하기**
 
@@ -832,7 +832,7 @@ int main() {
 #include <iostream>
 using namespace std;
 
-bool average(int a[], int size, int& avg) {
+bool average(int a[], int size, int& avg) { // 참조를 위해 & 사용
 	if(size <= 0)
 		return false;
 	int sum = 0;
@@ -857,11 +857,13 @@ int main() {
 매개 변수 오류
 ```
 
+<br>
+
 **예제 5–6 참조에 의한 호출로 Circle 객체에 참조 전달**
 
 ```C++
 앞내용 생략...
-void increaseCircle(Circle &c) {
+void increaseCircle(Circle &c) { // 참조로 받음!
 	int r = c.getRadius(); // 30
 	c.setRadius(r+1); // 30+1 = 31
 }
@@ -877,13 +879,15 @@ int main() {
 소멸자 실행 radius = 31
 ```
 
-**예제 5–8 간단한 참조 리턴 사례**
+<br>
+
+**예제 5–8 간단한 참조 리턴 사례(공간의 참조 리턴)**
 
 ```C++
 #include <iostream>
 using namespace std;
 
-char& find(char s[], int index) {
+char& find(char s[], int index) { // 리턴 타입에 참조 사용!!
 	return s[index]; // s[index] 공간의 참조 리턴
 }
 
@@ -891,7 +895,8 @@ int main() {
 	char name[] = "Mike";
 	cout << name << endl;
 
-	find(name, 0) = 'S'; // name[0]='S'로 변경. find()가 리턴한 위치에 문자 ‘m’ 저장
+    // 아래코드가 핵심@@
+	find(name, 0) = 'S'; // name[0]='S'로 변경된다!! find()가 리턴한 위치에 문자 ‘m’ 저장
 	cout << name << endl;
 
 	char& ref = find(name, 2); // ref는 name[2] 참조
@@ -904,17 +909,20 @@ Sike
 Site
 ```
 
+<br>
+
 **예제 5-10~5-12 복사생성자 관련 - 얕은 복사 생성자를 사용하여 프로그램이 비정상 종료되는 경우**
 
-Person::Person(Person& p) {
-
- this->id = p.id;
-
- this->name = p.name;
-
-} => 복생없으면 컴파일러로 인해 자동 디폴트 복사 생성자 삽입(아래코드도 마찬가지)
+* 즉, 복사생성자를 선언해두지 않아서 컴파일러가 자동으로 선언해줬을 경우이다. (얕은 복사 생성자)
+* **복사 생성자 형태가 궁금하다면 바로 아래 주석라인 코드 확인**
 
 ```C++
+/*
+Person::Person(Person& p) {
+ this->id = p.id;
+ this->name = p.name;
+} => 복생없으면 컴파일러가 이런 코드를 자동 디폴트 복사 생성자로 삽입 해줌!!(아래코드도 마찬가지)
+*/
 #define _CRT_SECURE_NO_WARNINGS
 #include <iostream>
 #include <cstring>
@@ -963,12 +971,16 @@ int main() {
 }
 =>
 daughter, father 순으로 소멸.
-father가 소멸할 때, 프로그램 비정상 종료됨 이부분이 중요!!!(얕은복사의경우!!)
+father가 소멸할 때, 프로그램 비정상 종료됨 이부분이 중요!!!(얕은복사의경우!!) 당연히 daughter가 먼저 소멸해서 father가 소멸할게 이미 없는 상태니까.
 ```
+
+<br>
 
 **예제 5-10~5-12 복사생성자 관련 - 깊은 복사 생성자를 가진 정상적인 Person 클래스**
 
-디폴트 복생이 아니라 따로 복생 만들어서 객체를 똑같이 복사를 해버림!!
+* 컴파일러가 복사생성자를 선언해준게 아니라 직접 선언해둔 것이다.(깊은 복사 생성자)
+
+* 디폴트 복생이 아니라 따로 복생 만들었으므로, 객체를 똑같이 복사 해버림!
 
 ```C++
 #define _CRT_SECURE_NO_WARNINGS
@@ -1030,21 +1042,23 @@ int main() {
 문제없이 잘됩니다.
 ```
 
+<br>
+
 **예제 5-10~5-12 복사생성자 관련 - 묵시적 복사 생성에 의해 복사 생성자가 자동 호출되는 경우**
 
 ```C++
-void f(Person person) { // 2. ‘값에 의한 호출’로 객체가 전달될 때.person 객체의 복사 생성자 호출
+void f(Person person) { // 2. ‘값에 의한 호출’로 객체가 전달될 때. person 객체의 복사 생성자 호출
 	person.changeName("dummy");
 }
 
 Person g() {
 	Person mother(2, "Jane");
-	return mother; // 3. 함수에서 객체를 리턴할 때.mother 객체의 복사본 생성. 복사본의 복사 생성자 호출
+	return mother; // 3. 함수에서 객체를 리턴할 때. mother 객체의 복사본 생성. 복사본의 복사 생성자 호출
 }
 
 int main() {
 	Person father(1, "Kitae");
-	Person son = father; //1. 객체로 초기화하여 객체가 생성될 때.son 객체의 복사 생성자 호출
+	Person son = father; //1. 객체로 초기화하여 객체가 생성될 때. son 객체의 복사 생성자 호출
 	f(father);								
 	g();										
 }
@@ -1054,41 +1068,50 @@ int main() {
 복사 생성자 실행 Jane
 ```
 
-### 6장:: 함수 중복과 static 멤버
-**함수 중복 -> 오버로딩(매개변수가 다름) C언어에서는 불가능~ - 리턴타입과는 무관**
-**오버라이딩은? (매개변수도 같음)**
-**소멸자 함수는 중복 불가** - 한 클래스 내에서 소멸자는 오직 하나, 매개 변수도 없음.
+<br><br>
 
-**디폴트 매개 변수** 사례
-msg("Hello"); => 틀림 msg( , "Hello"); 해도 틀리고 int id를 기본값줘도 틀림.
-=> why? 컴퓨터는 ( , "")이렇게 준다해도 처음 id값으로 인식. 뒤에꺼 바로 인식시키는 방법은 없음.
-디폴트 매개변수는 보통 매개 변수 앞에 선언될 수 없고, 뒤에 몰려야 함.
+## 6장:: 함수 중복과 static 멤버
 
-디폴트 매개 변수의 장점 : 함수 중복 간소화
-=> 다만, 중복된 함수와 동시 사용 불가.
+**함수 중복 -> 오버로딩(매개변수가 다름. 리턴타입과는 무관) C언어에서는 불가능**   
+**오버라이딩은? (매개변수 같음)**  
+**소멸자 함수는 중복 불가 : 한 클래스 내에서 소멸자는 오직 하나, 매개 변수도 없음.**
 
-**string s[5]; 이런식은 포인터 생각**
-**string s; 이런식은 배열 생각**
+**디폴트 매개 변수 사례**
+
+* `msg("Hello");`  => 틀림,  `msg( , "Hello");` 해도 틀리고 `int id` 를 기본값줘도 틀림.
+  * why?? 컴퓨터는 ( , "")이렇게 준다해도 처음 id값으로 인식. 뒤에꺼 바로 인식시키는 방법은 없음.  
+    디폴트 매개변수는 보통 매개 변수 앞에 선언될 수 없고, 뒤에 몰려야 함.
+  * 즉, `void printValue(int x=10, int y);` 이런식으로 디폴트 매개변수를 선언할 수는 없다!
+
+* 디폴트 매개 변수의 장점 : 함수 중복 간소화  
+  => 다만, 중복된 함수와 동시 사용 불가.
+
+<br>
 
 **<함수 중복의 모호성> - 3가지**
 
-1. 형 변환으로 인한 함수 중복의 모호성 => 피피티확인 모호한 호출, 컴파일 오류
-3.0이 float이냐 double이냐? 문제없다 이건 그냥 더큰 메모리에 넣으면 안전해서 double로 넣는다.
+1. 형 변환으로 인한 함수 중복의 모호성 => 모호한 호출, 컴파일 오류  
+3.0이 float이냐 double이냐? 문제없다 이건 그냥 더 큰 메모리에 넣으면 안전해서 double로 넣는다.  
 그러나, int 3이 문제인 것이다. double로? float로? 변환할 지 모호함.
 
-2. 참조 매개 변수로 인한 함수 중복의 모호성 => call by value인지 call by reference인지 모호.
+2. 참조 매개 변수로 인한 함수 중복의 모호성 => call by value인지 call by reference인지 모호.  
 int add(int a, int b){}와 int add(int a, int &b) {}
-3. 디폴트 매개 변수로 인한 함수 중복의 모호성 => 디폴트 매개변수를 이용하고 있는지 모호.
+3. 디폴트 매개 변수로 인한 함수 중복의 모호성 => 디폴트 매개변수를 이용하고 있는지 모호.  
 void msg(int id){}와 void msg(int id, string s=""){}라면, msg(6)??모호함.
 
-static 멤버와 non-static 멤버 => 클래스 멤버와 인스턴스 멤버
-static멤버를 사용할 때 전역변수로 초기화 꼭 해주고 사용해야 한다.
-**non-static 멤버 함수는 static에 접근 가능** 
-**static 멤버 함수에서 nonstatic 사용 불가, this 사용 불가.=> 객체생성 전에 호출할수 있기 때문**
-this는 인스턴스가 생겨야지 주소가 할당 된다.
-인스턴스가 없는상태에서 가능한 static을 사용하면 프로그램 터질 가능성 있다.
-han.sharedMoney나, Person::sharedMoney나 같다. => 클래스::로 사용가능하다는 의미.
-**전역함수들을 static멤버로 캡슐화하는 형태로 주로 작성.**
+<br>
+
+**static 멤버와 non-static 멤버 => 클래스 멤버와 인스턴스 멤버**
+
+* static멤버를 사용할 때 전역변수로 초기화 꼭 해주고 사용해야 한다.
+* non-static 멤버 함수는 static에 접근 가능 
+* **static 멤버 함수에서 non-static 사용 불가, this 사용 불가 => static은 객체생성 전에 호출할수 있기 때문**
+  * this는 인스턴스가 생겨야지 주소가 할당 된다.  
+    인스턴스가 없는상태에서 가능한 static을 사용하면 프로그램 터질 가능성 있다.  
+* static 함수 사용법은 `han.sharedMoney `, `Person::sharedMoney` 둘다 같다. => `클래스::` 형태로 사용가능하다는 의미.
+* **참고로 전역함수들을 static멤버로 캡슐화하는 형태로 주로 작성.**
+
+<br>
 
 #### 예제::
 
@@ -1116,7 +1139,7 @@ int main() {
 	f('@', 5); // 5 줄에 '@' 문자를 10개 출력한다.
 }
 =>
-
+          
 %%%%%%%%%%
 @@@@@@@@@@
 @@@@@@@@@@
@@ -1124,6 +1147,8 @@ int main() {
 @@@@@@@@@@
 @@@@@@@@@@
 ```
+
+<br>
 
 **예제 6-10 static 멤버를 가진 Math 클래스 작성**
 
@@ -1140,7 +1165,8 @@ int main() {
 	cout << max(10, 8) << endl;
 	cout << min(-3, -8) << endl;
 }
-이코드를 static 멤버를 가진 Math 클래스로 작성하고 멤버 함수를 호출하라.
+
+// 이코드를 static 멤버를 가진 Math 클래스로 작성하고 멤버 함수를 호출하라.
 #include <iostream>
 using namespace std;
 
@@ -1163,6 +1189,8 @@ int main() {
 -8
 ```
 
+<br>
+
 **예제 6–11 static 멤버를 공유의 목적으로 사용하는 예**
 
 ```C++
@@ -1181,7 +1209,7 @@ public:
 }; 
 Circle::Circle(int r) {
 	radius = r;
-	numOfCircles++; // 생성된 원의 개수 증가
+	numOfCircles++; // 생성된 원의 개수 증가 => static 멤버 사용 형태 참고
 }
 int Circle::numOfCircles = 0; // 0으로 초기화
 
@@ -1205,45 +1233,62 @@ int main() {
 생존하고 있는 원의 개수 = 2
 ```
 
+<br><br>
+
 ### 7장:: 프렌드와 연산자 중복
+
 **C++ 프렌드**
-**외부 함수, 클래스의 멤버함수, 클래스전체를 프렌드**로 선언 가능
 
-프렌드가 붙는순간 외부에서 사용하는데 private까지 보고 사용할 수 있는장점. **캡슐을 망가트리는 단점.**
+* **외부 함수, 클래스의 멤버함수, 클래스 전체를 프렌드**로 선언 가능
 
-**연산자 함수? => 리턴타입 operator연산자(매개변수리스트);**
+* **프렌드가 붙는순간 외부에서 사용하는데 private까지 보고 사용할 수 있는 장점. 다만, 캡슐을 망가트리는 단점.**
+
+<br>
+
+**연산자 함수? => 리턴타입 operator연산자(매개변수 리스트);**
 
 1. 외부 함수로 구현되고 클래스에 프렌드로 선언되는 경우
-2. 클래스의 멤버 함수로 작성되는 경우
-=> 피피티 예제는 거희다 2번 형식
-만약 연산자 멤버 함수 구현이 없었다면, 객체 + 객체는 오류! 였을것이다.
-따라서 연산자 멤버 함수를 구현하면, 객체 + 객체도 가능하다는 것.
-a ==b 가 a.==(b)형태로 컴파일러에 의한 변환.
-즉 함수형태로 사용하는건데, 햇갈리면 안됨. (this->kick이나 kick이나 둘다 a를 말함.)
+2. 클래스의 멤버 함수로 작성되는 경우  
+    => 예제는 거희 다 2번 형식
+  * 만약 연산자 멤버 함수 구현이 없었다면, 객체 + 객체는 오류! 였을것이다.  
+    따라서 연산자 멤버 함수를 구현하면, 객체 + 객체도 가능하다는 것.
+  * a ==b 가 a.==(b)형태로 컴파일러에 의한 변환.  
+    즉 함수형태로 사용하는건데, 햇갈리면 안됨. (this->kick이나 kick이나 둘다 a를 말함.)
 
-**아래는 왜 참조를 리턴을 하나요? 라는 질문의 해답이다. 이게 함수라서!!**
-++(++a)는 a가 2가 나올것같지만 본래 a를 불러오면 1이다. 왜?
-**=> (++a)에서 본래 a를 1올려주고, 새로운 a의 복사본을 만들어준다.**
-=> 그리고 ++(++a)가 되면, a의 복사본에 1을 올려준다.
-또다른 예시
-(a+=a)+=a; 라면 (리턴은 a의 복사본)+=a; 이다.
-=> a의 복사본에 a를 누적
+<br>
+
+**아래는 왜 참조를 리턴을 하나요? 라는 질문의 해답 : 이게 함수라서!!**
+
+* `++(++a)` 는 a가 2가 나올것같지만 본래 a를 불러오면 1이다. 왜?  
+  **=> (++a)에서 본래 a를 1올려주고, 새로운 a의 복사본을 만들어준다.**  
+  => 그리고 ++(++a)가 되면, a의 복사본에 1을 올려준다.
+* 또다른 예시  
+  `(a+=a)+=a;` 라면 `(리턴한 a의 복사본)+=a;` 이다.  
+  => a의 복사본에 a를 누적
+
+<br>
 
 **단항 연산자 중복(암기) -> 예외적인 문법. 단지 암기할것.**
-++a => &사용 : Power& operator++(); 전위(!op,~op,++op,--op)
-a++ => int사용 : Power operator++(int x); 후위(op++,op--)
-++(++a) 가 제대로 나올려면 참조&연산자를 사용 해야 한다. ++a가 복사본을 리턴해줘서.
 
-**2+a 는 앞의 방식으론 안된다.** 따라서 여기부턴 외부함수 형식으로 설명한다.(앞에 한것들도 다시설명+등등)
-2+a 예제는 외부함수이다. 멤버함수가 아니라. 따라서 **friend사용**
-=> 따라서 ( , )이다. 멤버는 this였고! 지금부턴 friend 사용하는 외부함수의 경우이다.
-this는?? 주소로 생각!
-++a => &사용 : Power& operator++(Power& op)
-a++ => int사용 : Power operator++(Power& op, int x)
-++(++a) =? ++a + a++
-''<<'' : left shift(쉬프트 연산자) => *2반복
+* `++a` => &사용 : Power& operator++(); 전위(!op,~op,++op,--op)
+* `a++` => int사용 : Power operator++(int x); 후위(op++,op--)
+* `++(++a)` 가 제대로 나올려면 `참조&` 연산자를 사용 해야 한다. **++a가 복사본을 리턴해주기 때문!**
 
-'>>' : right shift(쉬프트 연산자) => /2반복
+<br>
+
+**2+a 는 앞의 방식으론 안된다. 따라서 여기부턴 외부함수 형식으로 설명한다.(앞에 한것들도 다시설명+등등)**
+
+* `2+a` 예제는 외부함수이다. 멤버함수가 아니라. 따라서 **friend사용**  
+  => 따라서 ( , )이다. 멤버는 this였고! 지금부턴 friend 사용하는 외부함수의 경우이다.
+  * 참고로 `this`는 주소로 생각!  
+* `++a` => &사용 : Power& operator++(Power& op)
+* `a++` => int사용 : Power operator++(Power& op, int x)  
+  `++(++a) =? ++a + a++`
+* `'<<'` : left shift(쉬프트 연산자) => *2반복
+
+* `'>>'` : right shift(쉬프트 연산자) => /2반복
+
+<br>
 
 #### 예제::
 
@@ -1264,7 +1309,7 @@ public:
 };
 
 bool equals(Rect r, Rect s) { // 외부 함수
-	if(r.width == s.width && r.height == s.height) return true; 
+	if(r.width == s.width && r.height == s.height) return true; // 프렌드 선언했기에 private접근이 가능!!@
 	else return false;
 }
 
@@ -1276,6 +1321,8 @@ int main() {
 =>
 not equal
 ```
+
+<br>
 
 **예제 7–2 다른 클래스의 멤버 함수를 프렌드로 선언**
 
@@ -1294,11 +1341,11 @@ class Rect { // Rect 클래스 선언
 	int width, height;
 public:
 	Rect(int width, int height) { this->width = width; this->height = height; }
-	friend bool RectManager::equals(Rect r, Rect s); 
+	friend bool RectManager::equals(Rect r, Rect s); // 프렌드 선언!!
 };
 
 bool RectManager::equals(Rect r, Rect s) { 
-	if(r.width == s.width && r.height == s.height) return true; 
+	if(r.width == s.width && r.height == s.height) return true; // 프렌드 선언했기에 private 접근 가능!@
 	else return false;
 }
 
@@ -1312,6 +1359,8 @@ int main() {
 =>
 equal
 ```
+
+<br>
 
 **예제 7–3 다른 클래스 전체를 프렌드로 선언**
 
@@ -1331,7 +1380,7 @@ class Rect { // Rect 클래스 선언
 	int width, height;
 public:
 	Rect(int width, int height)  { this->width = width; this->height = height; }
-	friend RectManager;
+	friend RectManager; // 프렌드 선언(클래스 전체를!!)
 };
 
 bool RectManager::equals(Rect r, Rect s) { // r과 s가 같으면 true 리턴
@@ -1344,6 +1393,8 @@ void RectManager::copy(Rect& dest, Rect& src) { // src를 dest에 복사
 }
 ... 이하생략
 ```
+
+<br>
 
 **예제 7-4 두 개의 Power 객체를 더하는 + 연산자 작성**
 
@@ -1385,6 +1436,8 @@ kick=4,punch=6
 kick=7,punch=11
 ```
 
+<br>
+
 **예제 7-5 두 개의 Power 객체를 비교하는 == 연산자 작성**
 
 ```C++
@@ -1423,6 +1476,8 @@ kick=3,punch=5
 kick=3,punch=5
 두 파워가 같다.
 ```
+
+<br>
 
 **예제 7-6 두 Power 객체를 더하는 += 연산자 작성** 
 
@@ -1465,6 +1520,8 @@ kick=7,punch=11
 kick=7,punch=11
 ```
 
+<br>
+
 **전위 ++ 연산자 중복, !연산자 중복, 후위 연산자 중복 - 지금부터 단항연산자**
 
 ```C++
@@ -1496,6 +1553,8 @@ Power Power::operator++(int x) {
 	return tmp; // 증가 이전의 객체(객체 a) 리턴
 }
 ```
+
+<br>
 
 **예제 7-11 2+a를 위한 + 연산자 함수를 프렌드로 작성 -> 여기부터 프렌드 사용한경우**
 
@@ -1540,6 +1599,8 @@ kick=3,punch=5
 kick=5,punch=7
 ```
 
+<br>
+
 **프렌드 함수로 구현한 +연산자와, 후위, 전위 ++연산자**
 
 ```C++
@@ -1563,6 +1624,8 @@ Power operator++ (Power& op, int x) {
 	return tmp;
 }
 ```
+
+<br>
 
 **예제 7-14 참조를 리턴하는 << 연산자 작성**
 
@@ -1599,15 +1662,21 @@ int main() {
 kick=15,punch=16
 ```
 
+<br><br>
+
 ### 8장:: 상속
 
 **자바는 다중 상속을 막아놨지만, C++은 다중 상속 허용(양쪽으로 상속)**
 
-업 캐스팅 : 파생 클래스 포인터가 기본 클래스 포인터에 치환되는 것
-다운 캐스팅 : 기본 클래스의 포인터가 파생 클래스의 포인터에 치환되는 것
-=> 포인터를 이용하고 있음.
+* 업 캐스팅 : 파생 클래스 포인터가 기본 클래스 포인터에 치환되는 것
+* 다운 캐스팅 : 기본 클래스의 포인터가 파생 클래스의 포인터에 치환되는 것  
+  => 포인터를 이용하고 있음.
 
-업 캐스팅, 다운 캐스팅 (Point(부모), ColorPoint(아들))
+<br>
+
+**업 캐스팅, 다운 캐스팅 (Point(부모), ColorPoint(아들))**
+
+```c++
 ColorPoint *pDer, cp;
 Point *pBase, po;
 pBase = & po;
@@ -1615,42 +1684,62 @@ pDer = (ColorPoint*) pBase; (다운캐스팅)
 pDer->set(3,4);
 pDer->setcolor("Red"); => 컴파일 에러
 만약 pBase = &cp;라면 컴파일 가능 (업캐스팅) => **업캐스팅후 다운캐스팅을 해야 에러X**
+```
 
-접근 지정자
-pivate(상속 X), public, protected(상속 O)
+<br>
 
-protected이면, 상속 클래스 내부나, 상속 클래스의 함수내부에서 접근가능
-=> main()에서 사용시 당연히 안된다. (상속이 아니라 자신이라해도 마찬가지) (main도 함수니까)
+**접근 지정자**
 
-생성자는 기본 클래스 먼저 실행되고 파생 클래스 실행
-소멸자는 ? 반대로 파생 클래스 먼저 실행되고 기본 클래스 실행
+* pivate(상속 X), public, protected(상속 O)
 
-컴파일러의 기본 생성자 호출 코드 삽입
-예: B() : A() {코드} 
-    B(int x) : A() {코드} 
-=> A() 이것이 컴파일러가 묵시적으로 기본 클래스의 기본 생성자를 호출하도록 삽입
-=> 그렇다는것은 아무것도 안적으면 컴파일러가 기본클래스의 기본 생성자를 호출하게함.
-=> A() {} 생성자 없이, A(int x) {} 생성자만 A클래스에 있다면 컴파일시 오류뜬다.
-=> B(int x) : A(x+3) {코드} 이런식으로 코드 작성시 컴파일 에러 해결 및 A(int x) {} 생성자를 호출.
+* protected이면, 상속 클래스 내부나, 상속 클래스의 함수내부에서 접근가능  
+  => main()에서 사용시 당연히 안된다. (상속이 아니라 자신이라해도 마찬가지) (main도 함수니까)
 
-boolalpha는 불린 값(1,0)을 true,false로 출력되게 하는 조작자(안중요)
-=> 문자나 문자열에서 불린은 true,false로 원래나온다?
+<br>
 
-상속 지정
-A -> class B : private A 로 지정시 classC : public B 는 A꺼를 아무것도 접근못함. 이런느낌
-public – 기본 클래스의 protected, public 멤버 속성을 그대로 계승
-private – 기본 클래스의 protected, public 멤버를 private으로 계승
-protected – 기본 클래스의 protected, public 멤버를 protected로 계승
+**생성자는 기본 클래스 먼저 실행되고 파생 클래스 실행  
+소멸자는 ? 반대로 파생 클래스 먼저 실행되고 기본 클래스 실행**
 
-다중 상속 선언 및 멤버 호출
-문제점 : 죽음의 다이아몬드.
-mode->readPos->mode->writePos->safe
+* 컴파일러의 기본 생성자 호출 코드 삽입 
+  * 예: `B() : A() {코드} `  
+    `B(int x) : A() {코드}`
+  * => A() 이것이 컴파일러가 묵시적으로 기본 클래스의 기본 생성자를 호출하도록 삽입
+  * => 그렇다는것은 아무것도 안적으면 컴파일러가 기본클래스의 기본 생성자를 호출하게함.
+  * => A() {} 생성자 없이, A(int x) {} 생성자만 A클래스에 있다면 컴파일시 오류뜬다.
+  * => B(int x) : A(x+3) {코드} 이런식으로 코드 작성시 컴파일 에러 해결 및 A(int x) {} 생성자를 호출.
 
-가상 상속 => 해결방안
-파생 클래스의 선언문에서 기본 클래스 앞에 virtual로 선언
-파생 클래스의 객체가 생성될 때 기본 클래스의 멤버는 오직 한 번만 생성
-기본 클래스의 멤버가 중복하여 생성되는 것을 방지
-38페이지 : mode->readPos->writePos->safe
+<br>
+
+**boolalpha는 불린 값(1,0)을 true,false로 출력되게 하는 조작자(안중요)**
+
+* 문자나 문자열에서 불린은 true, false로 원래나온다?
+
+<br>
+
+**상속 지정**
+
+* A -> class B : private A 로 지정시 classC : public B 는 A꺼를 아무것도 접근못함. 이런느낌
+* public – 기본 클래스의 protected, public 멤버 속성을 그대로 계승
+* private – 기본 클래스의 protected, public 멤버를 private으로 계승
+* protected – 기본 클래스의 protected, public 멤버를 protected로 계승
+
+<br>
+
+**다중 상속 선언 및 멤버 호출**
+
+* 문제점 : 죽음의 다이아몬드.
+* mode->readPos->mode->writePos->safe
+
+<br>
+
+**가상 상속 => 해결방안**
+
+* 파생 클래스의 선언문에서 기본 클래스 앞에 virtual로 선언
+* 파생 클래스의 객체가 생성될 때 기본 클래스의 멤버는 오직 한 번만 생성
+* 기본 클래스의 멤버가 중복하여 생성되는 것을 방지
+* 38페이지 : mode->readPos->writePos->safe
+
+<br>
 
 #### 예제::
 
