--- a/_posts/Language/C++/2022-02-04-(C++)Qt사용법_GUI.md
+++ b/_posts/Language/C++/2022-02-04-(C++)Qt사용법_GUI.md
@@ -15,17 +15,18 @@ sidebar:
 * 장점 : UI를 직접 보면서 꾸밀수 있는 장점이 있음.
 * 단점 : Qt 따로 설치해야하는 번거로움이 있음.
 
+<br>
+
 **알고리즘에 부호-보수1, 2 Qt로 구현한 부분 코드보고 사용법 익히기.**
 
-
+<br><br>
 
 ## 2. Qt 구이 exe로 배포방법
 
 * 아마도 그냥 일반적인 컴파일 방법과 똑같을 건데, 만약 안된다면 아래 사이트 참고
+* 사이트 참고 : https://olidang.tistory.com/44
 
-사이트 참고 : https://olidang.tistory.com/44
-
-
+<br><br>
 
 ## 3. (참고)일반적인 exe로 컴파일 방법
 
