--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -271,3 +271,28 @@ SELECT b.animal_id, b.name from animal_ins a join animal_outs b on (b.animal_id=
 
 <br><br>
 
+## 문제 9
+
+* **[오랜 기간 보호한 동물(1)](https://school.programmers.co.kr/learn/courses/30/lessons/59044)**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+SELECT a.name, a.datetime 
+from animal_ins a
+where a.animal_id not in (select a.animal_id from animal_ins a join animal_outs b on a.animal_id=b.animal_id)
+order by a.datetime asc limit 3;
+```
+
+<br>
+
+### 풀이
+
+**`where a.animal_id not in (select a.animal_id from animal_ins a join animal_outs b on a.animal_id=b.animal_id)` 가 핵심!!**
+
+* `in 쿼리문` 에서 `join` 한 값을 `animal_ins a` 테이블의 `animal_id`  값과 동일하지 않는(not in)것을 조건으로 한다!!
+
+<br><br>
