--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -296,3 +296,27 @@ order by a.datetime asc limit 3;
 * `in 쿼리문` 에서 `join` 한 값을 `animal_ins a` 테이블의 `animal_id`  값과 동일하지 않는(not in)것을 조건으로 한다!!
 
 <br><br>
+
+## 문제 10
+
+* **[있었는데요 없었습니다](https://school.programmers.co.kr/learn/courses/30/lessons/59043)**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+SELECT a.animal_id, a.name 
+from animal_ins a join animal_outs b on a.animal_id=b.animal_id 
+where a.datetime > b.datetime order by a.datetime asc;
+```
+
+<br>
+
+### 풀이
+
+**이때까지 이전 문제들을 풀어왔다면, 이 문제는 너무 쉽게 느껴지기 때문에 풀이를 생략하겠다**
+
+<br><br>
+
