--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -320,3 +320,31 @@ where a.datetime > b.datetime order by a.datetime asc;
 
 <br><br>
 
+## 문제 11
+
+* **[없어진 기록 찾기](https://school.programmers.co.kr/learn/courses/30/lessons/59042)**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+SELECT animal_id, name from animal_outs
+where animal_id not in
+(select a.animal_id from animal_ins a join animal_outs b on a.animal_id=b.animal_id)
+order by animal_id asc;
+```
+
+<br>
+
+### 풀이
+
+**`where animal_id not in
+(select a.animal_id from animal_ins a join animal_outs b on ` 이부분만 이해했다면 쉬운 문제이다.**
+
+* 앞에서도 이와 유사한 문제가 있었다. 
+* `not in 쿼리문` 을 적절한 위치에서 적절하게 잘 사용하는 연습을 많이 해주자.
+
+<br><br>
+
