--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -348,3 +348,32 @@ order by animal_id asc;
 
 <br><br>
 
+## 문제 12
+
+* **[조건에 맞는 사용자와 총 거래금액 조회하기](https://school.programmers.co.kr/learn/courses/30/lessons/164668)**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+SELECT b.user_id, b.nickname, sum(a.price) as total_sales from used_goods_board a join used_goods_user b on a.writer_id=b.user_id 
+where a.status = "DONE" 
+group by b.user_id having sum(a.price) >= 700000 order by total_sales asc;
+```
+
+<br>
+
+### 풀이
+
+**`from used_goods_board a join used_goods_user b on a.writer_id=b.user_id ` 이것으로  두 테이블을 조인해서 접근해보았다.**
+
+**`where a.status = "DONE" ` 이 부분도 문제를 잘 읽었다면, 완료된 거래를 의미한다는것을 알 수 있을 것이다.**
+
+**`group by b.user_id having sum(a.price) >= 700000 order by total_sales asc;` 마지막으로 이부분도 중요하다.**
+
+* `having` 부분은 보통 sum같은 함수를 쓰는 것을 사용하도록 하자.
+
+<br><br>
+
