--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -377,3 +377,29 @@ group by b.user_id having sum(a.price) >= 700000 order by total_sales asc;
 
 <br><br>
 
+## 문제 13
+
+* **[조건에 맞는 사용자 정보 조회하기](https://school.programmers.co.kr/learn/courses/30/lessons/164670)**
+* **`concat` 메소드 기억!@, 기존 `+` 연산으로는 문자+숫자 인 경우 에러가 발생하므로 `concat`을 추천**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+SELECT b.user_id, b.nickname, concat(b.city," ", b.street_address1, " ", b.street_address2) as 전체주소, concat(substr(b.tlno,1,3),"-",substr(b.tlno,4,4),"-",substr(b.tlno,8,4)) as 전화번호 
+from used_goods_board a join used_goods_user b on b.user_id=a.writer_id 
+group by b.user_id having count(*) >=3 order by b.user_id desc;
+```
+
+<br>
+
+### 풀이
+
+`b.user_id, b.nickname, concat(b.city," ", b.street_address1, " ", b.street_address2) as 전체주소` 
+
+* `concat` 을 사용해서 연결하였다.
+
+<br><br>
+
