--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -403,3 +403,38 @@ group by b.user_id having count(*) >=3 order by b.user_id desc;
 
 <br><br>
 
+## 문제 14
+
+* **[조회수가 가장 많은 중고거래 게시판의 첨부파일 조회하기](https://school.programmers.co.kr/learn/courses/30/lessons/164671)**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+SELECT concat("/home/grep/src/",b.board_id,"/",b.file_id,b.file_name,b.file_ext) as file_path
+from used_goods_board a join used_goods_file b on a.board_id=b.board_id 
+where a.views in (select max(a.views) from used_goods_board a)
+order by b.file_id desc;
+```
+
+<br>
+
+### 풀이
+
+**`SELECT concat("/home/grep/src/",b.board_id,"/",b.file_id,b.file_name,b.file_ext) as file_path` 에서 볼것은??**
+
+*  `concat` 함수 사용을 꼭 기억!
+
+**`from used_goods_board a join used_goods_file b on a.board_id=b.board_id `를 해야 두테이블의 연관된 데이터들을 조회 할 수 있는것**
+
+* 어디서 어느 키를 중점으로 join을 하는지 잘 판단
+
+**`where a.views in (select max(a.views) from used_goods_board a)` 이 중요했다**
+
+* 실수로 in 쿼리문에 `()` 를 붙이지 않아서 에러가 발생했었다,,
+* 또한 `where` 문에 in 쿼리문을 사용해서 `max` 값을 따로 구해서 사용하는 이런 형태에도 익숙해지자@@
+
+<br><br>
+
