--- a/_posts/Coding_Test/Programmers_Test/2023-04-02-(MySQL)LV 4 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-04-02-(MySQL)LV 4 문제 모음.md
@@ -21,10 +21,10 @@ typora-root-url: ../../..
 ## 문제 1
 
 * **[보호소에서 중성화한 동물](https://school.programmers.co.kr/learn/courses/30/lessons/59045)**
-* `charindex(' ', 문자열)` 특정 문자 위치를 가져오는 함수인데, 프로그래머스에서 동작을 안하는것 같다?
-  * 따라서 `like "%문자열%"` 로 대신했다.
+* **`charindex(' ', 문자열)` 특정 문자 위치를 가져오는 함수인데, 프로그래머스에서 동작을 안하는것 같다?**
+  * **따라서 `like "%문자열%"` 로 대신했다.**
 
-* 여기선 사용안했지만 `substring(문자열, 시작, 길이), left(문자열, 길이), right(문자열, 길이)` 참고
+* **여기선 사용안했지만 `substring(문자열, 시작, 길이), left(문자열, 길이), right(문자열, 길이)` 참**고
 
 <br>
 
@@ -46,6 +46,65 @@ order by a.animal_id;
 **`where a.sex_upon_intake like "Intact%" and not b.sex_upon_outcome like "Intact%"` 에서 like를 사용하는이유는?**
 
 * `sex_upon_intake` 가 중성화 여부 뿐만아니라 성별까지 존재하기 때문이다.
+
+<br><br>
+
+## 문제 2
+
+* **[입양 시각 구하기(2)](https://school.programmers.co.kr/learn/courses/30/lessons/59413)**
+
+* **`with, union, union all, recursive, right join` 이렇게 다양한 함수들을 많이 사용한 문제**
+
+  * `with` : CTE(common table expression)을 생성하는 문법
+
+    ```mysql
+    WITH [RECURSIVE] TABLE명 AS (
+        SELECT - # 비반복문. 무조건 필수
+        [UNION ALL] # RECURSIVE 사용 시 필수. 다음에 이어붙어야 할 때 사용
+        SELECT - 
+        [WHERE -] # RECURSIVE 사용 시 필수. 정지 조건 필요할 때 사용
+    )
+    ```
+
+  * `union` 은 결합하며 중복제거, `union all` 은 결합하며 중복제거X
+
+  * `right join` 은 오른쪽 테이블의 모든 값을 가져와서 남는게 없도록 함
+
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+# 테이블을 만들어서 0~23을 추가한다. 그리고 join 해서 활용하겠다.
+with recursive cte as (
+    select 0 as hour
+    union all
+    select hour+1 from cte
+    where hour < 23
+)
+
+SELECT b.hour, count(a.animal_id) as count
+from animal_outs a right join cte b on hour(a.datetime) = b.hour
+group by b.hour;
+```
+
+<br>
+
+### 풀이
+
+**`with recursive cts as (...)` 코드로 임시로 테이블을 만든다.**
+
+* 테이블을 만들어서 0~23 을 추가!! 그리고 이것을 join 해서 활용.
+
+**`SELECT b.hour from animal_outs a right join cte b on hour(a.datetime) = b.hour;` 를 출력해보면??**
+
+* hour가 중복해서 출력되는데 그 개수가 count값이 되는것이다.
+
+**`count(*)` 로 안하고 `count(a.animal_id)` 로 하는이유는??**
+
+* `count(*)` 로 하면 모든 부분을 따지므로 `b.hour` 부분도 카운트가 되어서 최소 1개 이상이 되기 때문이다.
 
 <br><br>
 
