--- a/_posts/Coding_Test/Programmers_Test/2023-04-02-(MySQL)LV 4 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-04-02-(MySQL)LV 4 문제 모음.md
@@ -108,3 +108,31 @@ group by b.hour;
 
 <br><br>
 
+## 문제 3
+
+* **[우유와 요거트가 담긴 장바구니](https://school.programmers.co.kr/learn/courses/30/lessons/62284)**
+
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+SELECT a.cart_id from (select cart_id from cart_products where name = "Yogurt") a join
+(select cart_id from cart_products where name = "Milk") b on a.cart_id = b.cart_id
+group by a.cart_id;
+```
+
+<br>
+
+### 풀이
+
+**서브쿼리문을 각각 Yogurt, Milk 조건을 줘서 만들고, 이를 cart_id값을 기준으로 join해서 구하였다.**
+
+**마지막엔 그룹을 줘서 값이 한개씩 나오게 출력하였다.**
+
+**다만, 너무 코드가 별루인것 같아서 다른방법을 찾아보는걸 추천...**
+
+<br><br>
+
