docs : 라이브러리 추가

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-29-(백준)알고리즘 활용 라이브러리 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-29-(백준)알고리즘 활용 라이브러리 - cpp.md
@@ -34,6 +34,7 @@ typora-root-url: ../../..
 ```c++
 #include <string> // getline, compare 등등 사용위해
 #include <cstring> // C의 string.h => strLen, strcmp 등등 사용위해
+#include <sstream> // split 함수를 구현하기 위해
 ```
 
 * **문자열 라이브러리**
@@ -43,6 +44,7 @@ typora-root-url: ../../..
       * 비교 후 동일하면 `0` 을 출력, 동일하지 않으면 `-1` 을 출력
     * char[] 형태의 문자열 길이 구하는 함수 - `strlen(문자열)`
       * `strlen(inputStr)`
+
   * **string 라이브러리**
     * string 형태를 문자열 비교 함수 - `문자열1.compare(문자열2)`
       * `if(!inputStr.compare("push")) { ... }`
@@ -54,6 +56,53 @@ typora-root-url: ../../..
       * `'\n'` 을 끝이라고 판단하는 함수이다. 따라서 버퍼에 `'\n'` 이 남아있는경우 바르게 동작하지 않을 수 있다.  
         `cin` 같이 일반적으로 입력 받을때 버퍼에 `'\n'` 을 남길 수 있기 때문
         * `cin.ignore()` 을 이용해서 버퍼를 비워주고 `getline` 함수를 활용하자.
+    * string -> int 타입 변환 - `stoi`  
+      => 참고로 `atoi` 와 햇갈리지 말것. 이는 C에서 사용..(필자는 이것 때문에 시간낭비ㅜㅜ)
+      * `stoi` : string to int
+      * `stod` : string to double
+      * `stoll` : string to long long (int형태에 사용. 범위가 매우 큼)
+
+  * **문자열 나누는 라이브러리 (string, sstream)**
+
+    * `substr` 문자열 일부를 반환 -` a.substr(0, 5)`
+
+      * `string 라이브러리` 를 이용
+
+    * `split` 은 타언어와 다르게 c++은 없음 (필자는 해당 함수 있는줄알고 쓰려다가 코테 망함 ㅠ ㅠ)
+
+      * 직접 구현할건데 이를 도우는게 `sstream 라이브러리`
+
+        ```c++
+        #include <iostream>
+        #include <vector>
+        #include <sstream>
+        
+        using namespace std;
+        
+        vector<string> split(string str, char delimiter); // delimiter 기준으로 나눔
+        
+        int main(){
+            string test = "chul su kim";
+            vector<string> result = split(test, ' ');
+            for (int i=0;i<result.size();i++){
+                cout << result[i] << " ";
+            }
+        }
+        
+        vector<string> split(string inputStr, char delimiter) {
+            vector<string> answer;
+            stringstream ss(inputStr); // 문자열 버퍼 사용
+            string temp;
+         
+            // 위에서 언급한 getline(cin, inputStr) 형태에서 + 구분자 기능 활용
+            while (getline(ss, temp, delimiter)) { // getline의 구분자 기능 활용
+                answer.push_back(temp);
+            }
+         
+            return answer;
+        }
+        ```
+
 * **문자열 관련 정보**
   * **문자열의 끝은 항상 `'\0'` 이다.** 
     * 따라서 `char[]` 배열을 전역으로 선언시 `'\0'` 으로 초기화가 된다.
@@ -80,9 +129,22 @@ typora-root-url: ../../..
 #include <stack> // 스택
 #include <deque> // 데크 - 양방향 큐
 #include <queue> // 큐
+
+/*추가로 같이 알아두면 좋음*/
+#include <vector> // pair까지 포함, vector또한 push & pop 가능(동적 리스트임)
+struct node {
+    int key;
+    node* left = nullptr;
+    node* right = nullptr;
+    node* parent = nullptr;
+};
+typedef node* Node; // Node x를 node* x처럼 사용가능해서 코드작성하기 편함 
 ```
 
 * **자료구조 관련 라이브러리**
+  * `vector<pair<int,int>> v` 형태로 사용하기 유용
+  * `struct` 관련해서 직접 자료구조를 생성하는것도 잘 이해하고 있으면 유용
+
 
 <br>
 
@@ -94,9 +156,33 @@ typora-root-url: ../../..
 
   * `sort` 함수 사용
     * `sort(&outputArr[0], &outputArr[배열 크기만큼]);`
+    
     * 기본값 오름차순
     
+    * **제일 중요한 `sort 커스텀`**
+    
+      ```c++
+      #include<algorithm>
+      #include<vector>
+      vector<int> inArr[10000];
+      for i..N, order[x]=i; ... 등등;
+      
+      // 비교하는 함수를 따로 커스텀!!!
+      bool comp(const int a, int b) { // 당연히 const 안써도 됨
+      	return order[a] < order[b]; // inArr값을 order배열로 비교하게끔 커스텀
+      }
+      
+      sort(inArr[i].begin(), inArr[i].end(), comp); // comp 사용
+      //sort(&inArr[i][0], &inArr[i].back()+1, comp);
+      ```
+    
+      * **vector**로 구현된 배열 각각 정렬은 `begin(), end()` 를 꼭 활용
+        * 바로 아래 주석 코드처럼 시작, 끝 주소를 잘 기입하면 되지만 **vector**에서는 위 코드처럼  
+          더 간단히 주소기입 가능!!
+        * `back()` 은 마지막 인덱스값 가져오므로 +1까지 해줘야 sort할때 문제없음
+    
   * `lower_bound` 함수 사용
+  
   * `lower_bound(&newArr[0], &newArr[lastIndex], inputNum)`
     
   * 데이터 내 특정 K값보다 같거나 큰 값이 처음 나오는 위치를 리턴해주는 알고리즘
