docs : 게시글 수정

--- a/_posts/ML&DL/Machine_Learning(머신러닝)/2022-08-18-00. Intro - 무료강의.md
+++ b/_posts/ML&DL/Machine_Learning(머신러닝)/2022-08-18-00. Intro - 무료강의.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "00. Intro"
+title:  "00. Intro - 무료강의"
 categories: Machine_Learning
 tag: [python, machine_learning, concept]
 toc: true
