--- a/_posts/ML&DL/Machine_Learning(머신러닝)/2022-08-25-07. 영화 추천 시스템(협업 필터링).md
+++ b/_posts/ML&DL/Machine_Learning(머신러닝)/2022-08-25-07. 영화 추천 시스템(협업 필터링).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "영화 추천 시스템(협업 필터링)"
+title:  "07. 영화 추천 시스템(협업 필터링)"
 categories: Machine_Learning
 tag: [python, machine_learning, concept]
 toc: true
