--- a/_posts/ML&DL/Machine_Learning(머신러닝)/2023-04-02 [1장] AI(인공지능) 이란.md
+++ b/_posts/ML&DL/Machine_Learning(머신러닝)/2023-04-02 [1장] AI(인공지능) 이란.md
@@ -13,5 +13,107 @@ typora-root-url: ../../..
 
 
 
+# AI(인공지능) 이란?
+**AI(Artificial Intelligence) 란 컴퓨터에게  “현  시점(연구가  이루어지는 시점)에서” 컴퓨터보다  인간이 더  잘한다고 생각되는  일을  시키는 방법을  연구하는 것이다.**
 
+* 예시로 바둑에서 인간을 이기는 컴퓨터 프로그램은, 인간을 이긴 후 더 이상 흥미로운 연구 주제가 되지 못한다.
 
+> Elaine Rich
+
+<br>
+
+**그러나 Rich의 정의도 모든 상황을 설명할 수 없다.  
+왜냐하면 Deep fake, Siri, AphaGo 등등 이미 이루어 낸 많은 Smart한 시스템들은 인공지능이 아닌가? 의문이 생기기 때문이다.**
+
+<br>
+
+**그래서 다시 정의하자면,**
+
+**1. AI(Artificial Intelligence) 란 컴퓨터에게  “현  시점(연구가  이루어지는 시점)에서” 컴퓨터보다  인간이 더  잘한다고 생각되는  일을  시키는 방법을  연구하는 것이다.**
+
+**2. 더 넓게 보면 위 과정에서 만들어진 모든 기술들이라 볼 수 있다.**
+
+> 참고로 인공지능에 관해 정의는 정말 다양해서 이것말고도 다른 다양한 정의들이 존재한다.
+
+<br><br>
+
+## AI의 역사
+
+<img src=".\images\2023-04-02 [1장] AI(인공지능) 이란\image-20230418183951905.png" alt="image-20230418183951905"  />
+
+* 굵은 빨간색 네모는 최근 들어 사용이 더 빈번해진 기술들을 의미합니다.
+* back-propagation 같이 딥러닝에 중요한 neural networks는 옛날부터 존재했던 개념!!
+
+<br><br>
+
+# AI 시스템 구현 형태 - Agent
+
+**AI 분야에서  AI 시스템을  `Agent` 라고  지칭한다.**
+
+**`Agent` 란 입력(Input)으로 부터 얻은 정보와 시스템 내부에 저장하고 있는 정보(있다면)를 처리하여 출력(Output)을 생성하는 시스템 전반을 지칭.**
+
+<br><br>
+
+## Agent 분류 3가지
+
+**Agent는 여러  관점에  따라  다양하게  분류할  수  있다.**
+
+<br>
+
+### 분류 1 : 물리 세계의 상호작용 유무
+
+<img src="./images/2023-04-02 [1장] AI(인공지능) 이란/image-20230418185305306.png" alt="image-20230418185305306"  />
+
+<br>
+
+### 분류 2 : 내부에 기억장치를 보유 유무
+
+**Reflex Agent(단순 반사 에이전트) : 내부 기억장치 보유X**
+
+* EX) 자동차 Auto lighting - 빛의 양에 따라 불의 켜지고 꺼지는 동작
+
+**Agent with memory(기억 에이전트) : 내부 기억장치 보유O**
+
+* EX) 예약 녹화 - 미리 저장된 예약 시간에만 저장된 채널을 녹화
+
+<br>
+
+### 분류 3 : 목적에 따라서 분류
+
+**Goal based Agent(목적 에이전트) : Agent가 이루려는 목적에 따라서 다른 출력**
+
+* EX) Cost-based Agent, Utility-based Agent
+  * 각각 비용 최소화 목적 에이전트, 효용 최대화 목적 에이전트로 해석된다.
+
+<br>
+
+<img src="/images/2023-04-02 [1장] AI(인공지능) 이란/image-20230418190226378.png" alt="image-20230418190226378"  /> 
+
+Agent 1 잘못 분류한 메일 12개,  
+Agent 2 잘못 분류한 메일 38개
+
+* 잘못 분류한 메일 개수로만 보면 Agent 1 이 더 뛰어난 spam 필터이다
+
+* 다만, "목적" 이 "피해를 최소화" 라면?? Agent 2 이 더 뛰어나다.
+  * 특히 스팸필터의 경우 이 "목적"을 보통 사용한다. 왜??
+  * 정상 메일을 스팸메일로 분류했을때의 피해가 스팸 메일을 정상 메일이라 분류했을 때 보다 더 크기 때문이다.
+  * Agent 1은 11개인 반면, Agent 2는 0개로 "피해(cost)" 입장에서는 훨씬 우월하다.
+
+<br>
+
+**만약 Spam 필터가 아닌 암 판정기라면??**
+
+* 오 분류율이 높아도 암인지 판단하는게 더 중요하다. 
+* 즉, 효용을 최대화하는 목적인 Utility based Agent라고 생각한다.
+
+<br><br>
+
+## Knowledge Based System
+
+**Agent 내부  구조의  모듈화를  통해  재사용성을  높이는  구조가  `Knowledge based system`이다.**
+
+**모듈화 목적 : inference하는 추론 시스템은 그대로 두고 KB의 내용만 바꾸어 최소한의 비용으로 Agent를 다른 목적에 사용할 수 있도록 하는 구조이다.**
+
+<img src="./images/2023-04-02 [1장] AI(인공지능) 이란/image-20230418184926650.png" alt="image-20230418184926650"  />
+
+> 참고 : Knowledge Based 와 inference에 관련해서는 뒤에 장에서 계속 정리한다.
