--- a/_posts/ML&DL/Machine_Learning(머신러닝)/2020-08-17-머신러닝과 딥러닝의 차이.md
+++ b/_posts/ML&DL/Machine_Learning(머신러닝)/2020-08-17-머신러닝과 딥러닝의 차이.md
@@ -49,7 +49,7 @@ typora-root-url: ../../..
   * 모델의 복잡성을 늘려 사람의 개입을 최소화 하므로 **특징 추출과정이 불필요**
     * 다만, 자연어는 벡터 형태로 가공을 하는편!!
 
-<img src=".\images\2020-08-17 머신러닝과 딥러닝의 차이\image-20230418174601048.png" alt="image-20230418174601048"  />
+<img src="\images\2020-08-17 머신러닝과 딥러닝의 차이\image-20230418174601048.png" alt="image-20230418174601048"  />
 
 > 출처 : [CODE_BLOG](https://www.codestates.com/blog/content/%EB%A8%B8%EC%8B%A0%EB%9F%AC%EB%8B%9D-%EB%94%A5%EB%9F%AC%EB%8B%9D%EA%B0%9C%EB%85%90)
 
