--- a/_posts/ML&DL/Machine_Learning(머신러닝)/2023-04-02-[1장] AI(인공지능) 이란.md
+++ b/_posts/ML&DL/Machine_Learning(머신러닝)/2023-04-02-[1장] AI(인공지능) 이란.md
@@ -39,7 +39,7 @@ typora-root-url: ../../..
 
 ## AI의 역사
 
-<img src=".\images\2023-04-02 [1장] AI(인공지능) 이란\image-20230418183951905.png" alt="image-20230418183951905"  />
+<img src="\images\2023-04-02 [1장] AI(인공지능) 이란\image-20230418183951905.png" alt="image-20230418183951905"  />
 
 * 굵은 빨간색 네모는 최근 들어 사용이 더 빈번해진 기술들을 의미합니다.
 * back-propagation 같이 딥러닝에 중요한 neural networks는 옛날부터 존재했던 개념!!
@@ -62,7 +62,7 @@ typora-root-url: ../../..
 
 ### 분류 1 : 물리 세계의 상호작용 유무
 
-<img src="./images/2023-04-02 [1장] AI(인공지능) 이란/image-20230418185305306.png" alt="image-20230418185305306"  />
+<img src="/images/2023-04-02 [1장] AI(인공지능) 이란/image-20230418185305306.png" alt="image-20230418185305306"  />
 
 <br>
 
@@ -114,6 +114,6 @@ Agent 2 잘못 분류한 메일 38개
 
 **모듈화 목적 : inference하는 추론 시스템은 그대로 두고 KB의 내용만 바꾸어 최소한의 비용으로 Agent를 다른 목적에 사용할 수 있도록 하는 구조이다.**
 
-<img src="./images/2023-04-02 [1장] AI(인공지능) 이란/image-20230418184926650.png" alt="image-20230418184926650"  />
+<img src="/images/2023-04-02 [1장] AI(인공지능) 이란/image-20230418184926650.png" alt="image-20230418184926650"  />
 
 > 참고 : Knowledge Based 와 inference에 관련해서는 뒤에 장에서 계속 정리한다.
