--- a/_posts/ML&DL/Machine_Learning(머신러닝)/2023-04-02-[1장] AI(인공지능) 이란.md
+++ b/_posts/ML&DL/Machine_Learning(머신러닝)/2023-04-02-[1장] AI(인공지능) 이란.md
@@ -39,7 +39,7 @@ typora-root-url: ../../..
 
 ## AI의 역사
 
-<img src="\images\2023-04-02 [1장] AI(인공지능) 이란\image-20230418183951905.png" alt="image-20230418183951905"  />
+<img src="/images/2023-04-02 [1장] AI(인공지능) 이란/image-20230418183951905.png" alt="image-20230418183951905"  />
 
 * 굵은 빨간색 네모는 최근 들어 사용이 더 빈번해진 기술들을 의미합니다.
 * back-propagation 같이 딥러닝에 중요한 neural networks는 옛날부터 존재했던 개념!!
