--- a/_posts/Coding_Test/Baekjoon_Concept/2023-04-23-(백준)알고리즘 고급트리 - 문제 모음(개념 포함).md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-04-23-(백준)알고리즘 고급트리 - 문제 모음(개념 포함).md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준]알고리즘 고급트리 - 문제 모음"
+title:  "[백준]알고리즘 고급트리 - 문제 모음(개념 포함)"
 categories : [Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: trues
@@ -26,8 +26,9 @@ typora-root-url: ../../..
 
 # 문제 이동
 
-* [이진 검색 트리1](https://www.acmicpc.net/problem/5639)
-* [이진 검색 트리2](https://www.acmicpc.net/problem/8916)
-* [이진 검색 트리3](https://www.acmicpc.net/problem/1539)
-* [이진 탐색 트리](https://www.acmicpc.net/problem/2957)
-* [구간 합 구하기(Segment)](https://www.acmicpc.net/problem/2042)
+* **[이진 검색 트리1(순회)](https://www.acmicpc.net/problem/5639)**
+* [이진 검색 트리2(순열)](https://www.acmicpc.net/problem/8916)
+  * 어려워서 다음에 풀어야겠다,,,
+* **[이진 검색 트리3(RBT)](https://www.acmicpc.net/problem/1539)**
+* **[이진 탐색 트리(RBT)](https://www.acmicpc.net/problem/2957)**
+* **[구간 합 구하기(Segment)](https://www.acmicpc.net/problem/2042)**
