--- a/_posts/Coding_Test/Baekjoon_Concept/2023-04-23-(백준)알고리즘 컴퓨터그래픽스 - 문제 모음(개념 포함).md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-04-23-(백준)알고리즘 컴퓨터그래픽스 - 문제 모음(개념 포함).md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준]알고리즘 컴퓨터그래픽스 - 문제 모음"
+title:  "[백준]알고리즘 컴퓨터그래픽스 - 문제 모음(개념 포함)"
 categories : [Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: trues
@@ -26,9 +26,10 @@ typora-root-url: ../../..
 
 # 문제 이동
 
-* [CCW](https://www.acmicpc.net/problem/11758)
-* [선분 교차 2](https://www.acmicpc.net/problem/17387)
-* [다각형의 면적](https://www.acmicpc.net/problem/2166)
-* [지민이의 테러(다각형의 포함)](https://www.acmicpc.net/problem/1688)
-* [볼록 껍질(외피)](https://www.acmicpc.net/problem/1708)
+* **[CCW](https://www.acmicpc.net/problem/11758)**
+* **[선분 교차 2](https://www.acmicpc.net/problem/17387)**
+* **[다각형의 면적](https://www.acmicpc.net/problem/2166)**
+* **[지민이의 테러(다각형의 포함)](https://www.acmicpc.net/problem/1688)**
+* **[볼록 껍질(외피)](https://www.acmicpc.net/problem/1708)**
 * [직사각형의 합집합(평면 소거법)](https://www.acmicpc.net/problem/2185)
+  * 어려워서 다음에 풀어봐야겠,,,
