--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-29-(백준)알고리즘 활용 라이브러리 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-29-(백준)알고리즘 활용 라이브러리 - cpp.md
@@ -122,6 +122,8 @@ typora-root-url: ../../..
 * **수학관련 라이브러리**
   * 예로 제곱 함수 - `pow(밑수, 지수)`
     * pow(2, 5) 는??	=>	2^5 = 32
+  * 각도 계산 함수 - `atan2(y,x)`
+    * 각도 계산이 필요할 때 사용하는 함수 => arctan는 삼각함수 공식을 의미
 
 <br>
 
@@ -130,7 +132,6 @@ typora-root-url: ../../..
 #include <deque> // 데크 - 양방향 큐
 #include <queue> // 큐
 
-/*추가로 같이 알아두면 좋음*/
 #include <vector> // pair까지 포함, vector또한 push & pop 가능(동적 리스트임)
 struct node {
     int key;
@@ -139,12 +140,15 @@ struct node {
     node* parent = nullptr;
 };
 typedef node* Node; // Node x를 node* x처럼 사용가능해서 코드작성하기 편함 
+
+#include<set> // set or map 자료구조(RBT기반)
 ```
 
 * **자료구조 관련 라이브러리**
-  * `vector<pair<int,int>> v` 형태로 사용하기 유용
-  * `struct` 관련해서 직접 자료구조를 생성하는것도 잘 이해하고 있으면 유용
-
+  * **`vector<pair<int,int>> v` 형태로 사용하기 유용**
+  * **`struct` 관련해서 직접 자료구조를 생성하는것도 잘 이해하고 있으면 유용**
+  * **`set, map` 관련 자료구조는 BST관련 문제 풀기에 매우 유용**
+    * 이런 유형에 잘 사용 : [백준-2957](https://www.acmicpc.net/problem/2957)
 
 <br>
 
