docs : 알고 계속 공부,,

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-(백준_강의1)알고리즘 기초1 - 수학(개념).md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-(백준_강의1)알고리즘 기초1 - 수학(개념).md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준]알고리즘 기초1 - 수학(개념)"
+title:  "[백준_강의1]알고리즘 기초1 - 수학(개념)"
 categories : [Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이, 나머지 연산, 최대 공약수, GCD, 최소 공배수, LCM, 서로소, 유클리드 호제법, 소수, 에라토스테네스의 체, 소인수, 소인수분해, 조합, 2진법, 8진법, 16진법, 10진법]
 toc: true
