--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준_강의1)알고리즘 기초1 - 문제 모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준_강의1)알고리즘 기초1 - 문제 모음.md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준]알고리즘 기초1 - 문제 모음"
+title:  "[백준_강의1]알고리즘 기초1 - 문제 모음"
 categories : [Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: trues
