--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -18,7 +18,9 @@ typora-root-url: ../../..
 
 **사용할 알고리즘들의 템플릿들을 정리하겠다.**
 
-**물론 약간의 알고리즘 해석만을 동반하며, 자세한 해석은 링크를 달아두겠다.**
+**물론 약간의 알고리즘 해석만을 동반하며, 자세한 해석은 아래 링크를 달아두겠다.**
+
+* **참고 링크 : [바킹독](https://blog.encrypted.gg/category/%EA%B0%95%EC%A2%8C/%EC%8B%A4%EC%A0%84%20%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98?page=1)**
 
 > 공부하면서 바킹독님의 유튜브, 블로그의 도움을 많이 받았습니다!!
 
@@ -59,8 +61,6 @@ typora-root-url: ../../..
 
   * 재귀함수가 자기 자신을 부를 때 스택 영역에 계속 누적이 됨
     * 100000 정도 호출했을 때 정상동작 하지 않으면 구글 검색을 통해 스택 메모리 제한을 해제할 것
-
-* **자세한 내용 : https://blog.encrypted.gg/943**
 
 ```c++
 void func1(int n) {
