--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -24,6 +24,17 @@ typora-root-url: ../../..
 
 > 공부하면서 바킹독님의 유튜브, 블로그의 도움을 많이 받았습니다!!
 
+
+
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+
+채워나갈 순서
+
+1. 바킹독 전부 템플릿
+2. 알고리즘 기초1 수학, 알고리즘 고급트리, 알고리즘 컴퓨터그래픽스 템플릿
+
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+
 <br><br>
 
 ## 재귀(Recursion)
@@ -61,6 +72,14 @@ typora-root-url: ../../..
 
   * 재귀함수가 자기 자신을 부를 때 스택 영역에 계속 누적이 됨
     * 100000 정도 호출했을 때 정상동작 하지 않으면 구글 검색을 통해 스택 메모리 제한을 해제할 것
+
+<br>
+
+**재귀로 로직 작성 순서**
+
+* **함수의 정의**
+* **base condition**
+* **재귀 식**
 
 ```c++
 void func1(int n) {
