--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
@@ -58,7 +58,7 @@ typora-root-url: ../../..
   * pass
 * **재귀**
   * [곱셈](https://www.acmicpc.net/problem/1629)
-  * [하노이 탑](https://www.acmicpc.net/problem/11729)
+  * [하노이 탑 이동 순서](https://www.acmicpc.net/problem/11729)
   * [Z](https://www.acmicpc.net/problem/1074)
 * **백트래킹**
   * [N과 M(1)](https://www.acmicpc.net/problem/15649)
